# myitertools

./: .coveragerc  CHANGELOG.md  README.dev.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/scripts/: version_tool.py
.github/skills/repo-health-check/: SKILL.md
.github/workflows/: lint.yml  release.yml  tests.yml
examples/: main.py
src/ben42code/myitertools/: __init__.py  islice_extended.py  iteratorcounter.py  streamsequence.py
src/myitertools/: islice_extended.py
tests/tooling/: version_tool_test.py
tests/unit/: doctest_test.py  islice_extended_test.py  iteratorcounter_test.py  streamsequence_test.py  version_tool_test.py
