[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "ben42code.myitertools"
version = "0.0.6"
authors = [
  { name = "Ben42Code", email="ben42code+myitertools@gmail.com" },
]
description = "Providing some additional capabilities on top of itertools."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["itertools", "python", "utilities", "iterators","islice"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
# Version tooling for the release workflow (.github/scripts/version_tool.py).
# Kept as a focused group so CI can install just these without the full dev set.
release = [
    "tomlkit==0.15.0",
    "packaging==25.0",
]
# Full local development environment: formatting, linting, testing, and the
# release tooling above. `packaging` (via release) is also required by the
# VSCode unittest adapter.
dev = [
    "autopep8==2.0.4",
    "isort==5.13.2",
    "coverage==7.5.1",
    "flake8==7.1.0",
    "ben42code.myitertools[release]",
]

[project.urls]
Homepage = "https://github.com/ben42code/myitertools"
GitHub = "https://github.com/ben42code/myitertools"
PyPI = "https://pypi.org/project/ben42code.myitertools/"
